# aoc23-hs

./: .envrc  .gitignore  README.md  TODO.md  fourmolu.yaml
day1/: LICENSE  day1.cabal  p1.hi  p1.hs  p1a.hs  p2.hs  p2a.hs
day1/app/: p2.hs
day10/: aoc23-hs.cabal
day10/app/: Main.hs
day11/: p1.hs
day12/: p1.hs
day13/: p1.hs  test.input
day14/: aoc23-hs.cabal
day14/app/: Main.hs
day15/app/: Main.hs
day2/: p1.hs  p2.hs
day3/: p1.hs  p2.hs  test.input
day4/: p1.hs  p2.hs
day5/: p1.hs  p2.hs
day6/: p1.hs
day7/: p1.hs  p2.hs  sample.input
day8/: p1.hs  p2.hs
day9/: p1.hs  p2.hs
template/: TODO.md  aoc23-hs.cabal  p1.hs
template/app/: Main.hs
