cabal-version:      2.4
name:               aoc23-hs
version:            0.1.0.0
author:             Prateek Rungta
maintainer:         not@mentioned.com

executable aoc23-hs
    main-is:          Main.hs
    build-depends: base ^>=4.17.2.0
                 , containers
                 , split
                 , text
                 , array
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        ImportQualifiedPost
